# soulchatServer

./: .gitignore  README.md
ChatServer/: CMakeLists.txt  项目详细分析文档.md
ChatServer/include/: AsioIOServicePool.h  CServer.h  ChatGrpcClient.h  LogicSystem.h  MysqlDao.h  MysqlMgr.h  RedisMgr.h  Singleton.h  const.h  data.h
ChatServer/src/: CServer.cpp  CSession.cpp  ChatGrpcClient.cpp  ChatServer.cpp  ChatServiceImpl.cpp  LogicSystem.cpp  MysqlDao.cpp  MysqlMgr.cpp  RedisMgr.cpp
ChatServer_2/: CMakeLists.txt  README.md
ChatServer_2/include/: CServer.h  ChatGrpcClient.h  MysqlDao.h  RedisMgr.h
ChatServer_2/src/: AsioIOServicePool.cpp  CServer.cpp  CSession.cpp  ChatGrpcClient.cpp  ChatServiceImpl.cpp  DistLock.cpp  LogicSystem.cpp  MysqlDao.cpp  RedisMgr.cpp  main.cpp
GetServer/: .gitattributes  .gitignore  CMakeLists.txt
GetServer/include/: AsioIOServicePool.h  CServer.h  ConfigMgr.h  HttpConnection.h  LogicSystem.h  MysqlDao.h  MysqlMgr.h  RedisConPool.h  RedisMgr.h  Singleton.h  StatusGrpcClient.h  VerifyGrpcClient.h  const.h
GetServer/proto/: message.proto
GetServer/src/: AsioIOServicePool.cpp  CServer.cpp  ConfigMgr.cpp  GateServer.cpp  HttpConnection.cpp  LogicSystem.cpp  MysqlDao.cpp  MysqlMgr.cpp  RedisMgr.cpp  StatusGrpcClient.cpp  VerifyGrpcClient.cpp
StatusServer/: CMakeLists.txt
StatusServer/include/: RedisConPool.h  RedisMgr.h  StatusServiceImpl.h  const.h
StatusServer/src/: ConfigMgr.cpp  DistLock.cpp  RedisMgr.cpp  StatusServiceImpl.cpp  main.cpp
VarifyServer/: const.js  email.js  package.json  proto.js  redis.js  server.js
